--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,16 +1,21 @@
-FROM php:7.4-fpm-buster
-SHELL ["/bin/bash", "-oeux", "pipefail", "-c"]
+FROM php:8.1-fpm-alpine
 
 ENV COMPOSER_ALLOW_SUPERUSER=1 \
   COMPOSER_HOME=/composer
 
 COPY --from=composer:2.0 /usr/bin/composer /usr/bin/composer
 
-RUN apt-get update && \
-  apt-get -y install git unzip libzip-dev libicu-dev libonig-dev && \
-  apt-get clean && \
-  rm -rf /var/lib/apt/lists/* && \
-  docker-php-ext-install intl pdo_mysql zip bcmath
+RUN apk --no-cache update \
+  && apk --no-cache upgrade \
+  && apk --no-cache add \
+  bash \
+  shadow \
+  tzdata \
+  git \
+  curl \
+  nodejs npm yarn \
+  openssl \
+  && cp /usr/share/zoneinfo/Japan /etc/localtime
 
 COPY ./php.ini /usr/local/etc/php/php.ini
 
